--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,6 @@ on:
 jobs:
   tests:
     runs-on: ${{ matrix.os }}
-    if: github.event_name == 'pull_request'
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
@@ -39,6 +38,7 @@ jobs:
 
   build_publish:
     runs-on: ubuntu-latest
+    needs: tests
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     steps:
       - uses: actions/checkout@v2
